test/invalid-semantic/58182_wrong_return_type/wrong_return_type.agu
-- Author: 58182, Gabriel Henriques

let wrongReturnType (n) : Int -> Bool = n + 2